Fixed the navbar which included words sign up and sign in before a user has entered the app. Truncated sign up page for users to only input email and password when signing up. Added css theem for sign up page to fit with the rest of the pages with forms.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,7 +8,7 @@
 @import "landing";
 @import "signin";
 
-body {
+.main_wallpaper {
   background: linear-gradient(
       rgba(97, 97, 97, 0.45), 
       rgba(97, 97, 97, 0.45)
@@ -18,6 +18,8 @@ body {
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
+  height: 100%
+  // height: 100vh;
 }
 
 html, body {
