--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -1,6 +1,6 @@
 nav.main_navbar {
   display: flex;
-  margin: 5px 15px 0px 15px;
+  margin: 0px 15px 0px 15px;
 }
 
 nav.main_navbar div.brand {
